crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_w70__w70_analysis_md_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_w70.rs
assertion_line: 287
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
