crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_w70__w70_analysis_mermaid_with_imports.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_w70.rs
assertion_line: 419
expression: out
---
graph TD
  engine -->|5| api
  api -->|3| types
  engine -->|2| types
